chore: AI code quality improvements (run 25652034728) (#818)
* chore: auto-format via Spotless and Prettier [skip ci]

* chore: AI code quality improvements via Claude [skip ci]

* Improve .toMap

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Benoit Lacelle <benoit.lacelle@gmail.com>